# reach-rarecell-benchmark

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  Snakefile  docker-compose.yml  dvc.yaml  environment.yml  paper.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  dataset_request.md  method_request.md
.github/workflows/: ci.yml  docker-ghcr.yml  docs.yml  smoke-benchmark.yml
configs/: benchmark.yaml  datasets.yaml  execution.yaml  metrics.yaml  signatures.yaml  tracks.yaml
configs/methods/: CaSee.yaml  DeepScena.yaml  FiRE.yaml  RareQ.yaml  TEMPLATE_new_method.yaml  cellsius.yaml  expr_threshold.yaml  scCAD.yaml  (+3 more)
data/: README.md
docs/: DATASETS.md  EXTENDING_METHODS.md  METHODS.md  RELEASE_MANIFEST.md  adding_new_dataset.md  adding_new_method.md  adding_new_track.md  architecture.md  benchmark_regeneration.md  data_contracts.md  fairness.md  index.md  installation.md  metrics.md  quickstart.md  reproducibility.md  reproducibility_receipt.md  results_interpretation.md  troubleshooting.md
notebooks/: reproduce_figures.ipynb
requirements/: base.txt  dev.txt  full.txt
scripts/: bootstrap_project.py  create_toy_data.py  download_dataset.py  evaluate_results.py  generate_figures.py  phase11_statistics.py  render_mermaid.sh  reproduce_from_snapshots.py  run_all.py  run_methods.py  run_phase.py  validate_repo.py
tables/: README.md
tests/: conftest.py  test_cli.py  test_leaderboard.py  test_method_interface.py  test_metrics.py  test_schemas.py  test_toy_data.py  test_track_generation.py  test_workflows.py
(+132 files in other folders)
